--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,10 @@ about_content: | # this will include new lines to allow paragraphs
    **AWS**, **Docker** and **Jenkins** are also things I had the chance to deal with.
 
    I am passionate about politics, ethics, phylosophy and the dynamics of society in general. 
-   Despite not knowing nearly enough about any of this, I love getting into deep interesting coversations on these topics. Or on any topic really.
-   I can be annoyingly curious, activate with caution.
+   Despite not knowing anywhere near enough about any of this, I love having coversations on these topics. Or on any topic really.
+
+   When not in front of a laptop, you will hopefully find me throwing frisbees in a park.
+
 # Experience Section
 experience_title: Experience
 
